Stop post jumping when comments load

--- a/src/columns.module.css
+++ b/src/columns.module.css
@@ -10,6 +10,7 @@
 
   .Columns > * {
     overflow-y: auto;
+    scrollbar-gutter: stable;
   }
   .Desktop {
     display: initial;
